--- a/backend/env.example
+++ b/backend/env.example
@@ -2,7 +2,11 @@
 PORT=4242
 NODE_ENV=development
 
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+
 # Add your other environment variables here
 # DATABASE_URL=your_database_url
-# JWT_SECRET=your_jwt_secret
-# STRIPE_SECRET_KEY=your_stripe_secret_key 
+# JWT_SECRET=your_jwt_secret 
