--- a/backend/package.json
+++ b/backend/package.json
@@ -8,15 +8,21 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["express", "nodejs", "backend", "api"],
+  "keywords": [
+    "express",
+    "nodejs",
+    "backend",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-} 
+}
